web: add comment deletion and editing
